--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,17 +1,18 @@
-gunicorn
-requests==2.25.1
-scipy==1.5.2
-Flask==1.1.2
-shap==0.37.0
-pandas==1.1.3
-plotly==4.14.1
-seaborn==0.11.0
-numpy==1.19.2
-lightgbm==3.1.1
-category_encoders==2.2.2
-joblib==1.0.0
-scikit_learn==0.23.2
-imbalanced-learn==0.7.0
-dill==0.3.3
-pickle5==0.0.12
-
+click==8.0.3
+Flask==2.0.2
+gunicorn==20.1.0
+itsdangerous==2.0.1
+Jinja2==3.0.3
+joblib==1.1.0
+lightgbm==3.3.2
+MarkupSafe==2.0.1
+numpy==1.22.2
+pandas==1.4.0
+pickle5==0.0.11
+python-dateutil==2.8.2
+pytz==2021.3
+scikit-learn==0.23.2
+scipy==1.8.0
+six==1.16.0
+threadpoolctl==3.1.0
+Werkzeug==2.0.3
