--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,18 +1,28 @@
 click==8.0.3
+cloudpickle==2.0.0
 Flask==2.0.2
 gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
 joblib==1.1.0
 lightgbm==3.3.2
+llvmlite==0.38.0
 MarkupSafe==2.0.1
-numpy==1.22.2
+numba==0.55.1
+numpy==1.21.5
+packaging==21.3
 pandas==1.4.0
 pickle5==0.0.11
+pyparsing==3.0.7
 python-dateutil==2.8.2
 pytz==2021.3
 scikit-learn==0.23.2
 scipy==1.8.0
+shap==0.40.0
 six==1.16.0
+slicer==0.0.7
 threadpoolctl==3.1.0
+tqdm==4.62.3
 Werkzeug==2.0.3
+xgboost==1.5.2
+
